@@ -1,5 +1,9 @@
 2008-04-03  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-menu.c (add_drive_to_menu): Remove debug
+
+2008-04-03  Bastien Nocera  <hadess@hadess.net>
+
 	* src/totem-menu.c (add_drive_to_menu), (update_drive_menu_items):
 	Better media menu support through GIO
 
